# Builder

./: Install.py  build.py  install.py  install.sh  upload.py
UnifiedML/: Build.py  Copy.py  ReturnToSource.py  setup.cfg
UnifiedML/src/: README.md  SHORT_STORY.md
UnifiedML/src/ML/: Distributions.py  Plot.py  README.md  Run.py  Utils.py  __init__.py
UnifiedML/src/ML/Agents/: AC2.py  AC2Agent.py  DQN.py  DrQV2.py  DuelingDQN.py  __init__.py
UnifiedML/src/ML/Agents/Blocks/: Actors.py  Augmentations.py  Creator.py  Critics.py  Encoders.py
UnifiedML/src/ML/Agents/Blocks/Architectures/: Distributions.py  Ensemble.py  MLP.py  MultiHeadAttention.py  Perceiver.py  RN.py  Residual.py  Transformer.py  __init__.py
UnifiedML/src/ML/Agents/Blocks/Architectures/Vision/: CNN.py  CoAtNet.py  ConvMixer.py  ConvNeXt.py  DCGAN.py  GroundingDINO.py  ResNet.py  TIMM.py  ViT.py
UnifiedML/src/ML/Agents/Blocks/Architectures/Vision/FoundationModels/: GroundingDINO.py
UnifiedML/src/ML/Agents/Examples/: DQN.py  DrQV2.py  DuelingDQN.py  HardDQN.py  Random.py
UnifiedML/src/ML/Agents/Lermanbots/: AC2.py
UnifiedML/src/ML/Agents/Losses/: PolicyLearning.py  QLearning.py  SelfSupervisedLearning.py
UnifiedML/src/ML/Benchmarking/: Logger.py  Plot.py  Vlogger.py
UnifiedML/src/ML/Blocks/: Actors.py  Augmentations.py  Creator.py  Critics.py  Encoders.py
UnifiedML/src/ML/Blocks/Architectures/: Residual.py  __init__.py
UnifiedML/src/ML/Blocks/Architectures/Vision/: TIMM.py
UnifiedML/src/ML/Hyperparams/: args.yaml  minihydra.py
UnifiedML/src/ML/Hyperparams/task/: RL.yaml  atari.yaml  classify.yaml  dmc.yaml  generate.yaml  mario.yaml  regression.yaml  supervised.yaml
UnifiedML/src/ML/Hyperparams/task/atari/: adventure.yaml  airraid.yaml  alien.yaml  amidar.yaml  assault.yaml  asterix.yaml  asteroids.yaml  atlantis.yaml  atlantis2.yaml  bankheist.yaml  basicmath.yaml  battlezone.yaml  beamrider.yaml  berzerk.yaml  blackjack.yaml  bowling.yaml  boxing.yaml  breakout.yaml  carnival.yaml  casino.yaml  centipede.yaml  choppercommand.yaml  combat.yaml  crazyclimber.yaml  crossbow.yaml  darkchambers.yaml  defender.yaml  demonattack.yaml  donkeykong.yaml  doubledunk.yaml  earthworld.yaml  elevatoraction.yaml  enduro.yaml  entombed.yaml  et.yaml  fishingderby.yaml  flagcapture.yaml  freeway.yaml  frogger.yaml  frostbite.yaml  (+68 more)
UnifiedML/src/ML/Hyperparams/task/classify/: caltech101.yaml  caltech256.yaml  celeba.yaml  cifar10.yaml  cifar100.yaml  cityscapes.yaml  custom.yaml  emnist.yaml  fashionmnist.yaml  flickr30k.yaml  flickr8k.yaml  generate_classify.py  hmdb51.yaml  imagenet.yaml  inaturalist.yaml  kinetics.yaml  kinetics400.yaml  kitti.yaml  kmnist.yaml  lfwpairs.yaml  lfwpeople.yaml  mnist.yaml  omniglot.yaml  phototour.yaml  places365.yaml  qmnist.yaml  sbdataset.yaml  sbu.yaml  semeion.yaml  stl10.yaml  svhn.yaml  tinyimagenet.yaml  ucf101.yaml  usps.yaml  vocdetection.yaml  vocsegmentation.yaml  widerface.yaml
UnifiedML/src/ML/Hyperparams/task/dmc/: acrobot_swingup.yaml  cartpole_balance.yaml  cartpole_balance_sparse.yaml  cartpole_swingup.yaml  cartpole_swingup_sparse.yaml  cheetah_run.yaml  cup_catch.yaml  finger_spin.yaml  finger_turn_easy.yaml  finger_turn_hard.yaml  generate_dmc.py  hopper_hop.yaml  hopper_stand.yaml  humanoid_run.yaml  humanoid_stand.yaml  humanoid_walk.yaml  pendulum_swingup.yaml  quadruped_run.yaml  quadruped_walk.yaml  reach_duplo.yaml  reacher_easy.yaml  reacher_hard.yaml  walker_run.yaml  walker_stand.yaml  walker_walk.yaml
UnifiedML/src/ML/Losses/: PolicyLearning.py  QLearning.py
UnifiedML/src/ML/World/: Dataset.py  Environment.py  EnvironmentV2.py  Environment_backup.py  Memory.py  MemoryV2.py  Metrics.py  Replay.py
UnifiedML/src/ML/World/Datasets/: YouTube.py
UnifiedML/src/ML/World/Environments/: Atari.py  Bittle.py  Classify.py  DMC.py  Datums.py  DatumsV2.py  SuperMario.py  YouTube.py  __init__.py
minihydra/: Build.py  Copy.py  setup.cfg
minihydra/src/minihydra/: MIT_LICENSE  README.md  __init__.py  figuring_out.py
tributaries-ml/: Build.py  setup.cfg
tributaries-ml/src/tributaries/: Central.py  README.md  SafePass.py  Sweeps.py  VPN.py  __init__.py
tributaries-ml/src/tributaries/Examples/Servers/: Bluehive.py  Minimal.py  XuLab.py  XuLabAdvanced.py
tributaries-ml/src/tributaries/Examples/Sweeps/: Bittle.py  ImageNet-mini.py  ImageNet.py  Pong.py  XRDsPaper.py  XRDsPaperBluehive.py
