[metadata]
name = UnifiedML
version = 1.0.0
author = Sam Lerman
author_email = agi.init@gmail.com
description = Unified library for intelligence training.
long_description = file: src/ML/README.md
long_description_content_type = text/markdown
keywords = artificial intelligence, machine learning, deep learning, reinforcement learning, image classification
url = https://github.com/agi-init/UnifiedML
project_urls =
    Bug Tracker = https://github.com/agi-init/UnifiedML/issues
classifiers =
    Programming Language :: Python :: 3.11.3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.10.8
install_requires =
    torch==2.0.1
    torchvision==0.15.2
    torchaudio==2.0.2
    pandas==1.5.3
    autorom[accept-rom-license]==0.6.1
    ale-py==0.8.1
    dm_control==1.0.13
    gym-super-mario-bros==7.4
    PyOpenGL-accelerate==3.1.7
    termcolor==1.1
    seaborn==0.11.2
    wandb==0.12.17
    imageio==2.22
    imageio-ffmpeg==0.4.7
    einops==0.4.1
    dill==0.3.7
#     vidgear==0.3.2  # TODO Include?
#     yt_dlp==2023.7.6  # TODO Does vidgear require this?
#     opencv-python==4.8.1.78  # TODO Why does vidgear require this?
    bleak==0.19.5
    minihydra==1.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ML = ML.Utils:run
    ml = ML.Utils:run
    Plot = ML.Benchmarking.Plot:main
    plot = ML.Benchmarking.Plot:main

[options.package_data]
ML =
    **/*.yaml
    **/*.py
