[metadata]
name = minihydra-leviathan
version = 1.0.0
author = Sam Lerman
author_email = cave.dwellers.tree.people@gmail.com
description = A lightweight sys-arg manager.
long_description = file: src/minihydra/README.md
long_description_content_type = text/markdown
keywords = sys args, hyperparams, command line, artificial intelligence, machine learning, deep learning, reinforcement learning, image classification
url = https://github.com/Cave-Dwellers-Tree-People/minihydra
project_urls =
    Bug Tracker = https://github.com/Cave-Dwellers-Tree-People/minihydra/issues
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.10.8
install_requires =
    PyYAML>=6.0

[options.packages.find]
where = src
