[metadata]
name = tributaries-ml
version = 1.0.1
author = Sam Lerman
author_email = agi.init@gmail.com
description = A library for mass-deploying UnifiedML apps on slurm-enabled servers.
long_description = file: src/tributaries/README.md
long_description_content_type = text/markdown
keywords = slurm, job scheduling, DRM, artificial intelligence, machine learning, deep learning, reinforcement learning, image classification
url = https://github.com/agi-init/tributaries
project_urls =
    Bug Tracker = https://github.com/agi-init/tributaries/issues
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.10.8
install_requires =
    pexpect==4.8.0
    cryptography>=39.0.0
    UnifiedML==1.0.1
    minihydra-leviathan==1.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tributaries = tributaries.Central:mass_deploy

[options.package_data]
tributaries =
    **/*.py
